Update reference list (#2279)

--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1100,19 +1100,20 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
 }
 
 @Article{FroehlichSor2022,
-  author       = {Fröhlich, Fabian AND Sorger, Peter K.},
-  journal      = {PLOS Computational Biology},
-  title        = {Fides: Reliable trust-region optimization for parameter estimation of ordinary differential equation models},
-  year         = {2022},
-  month        = {07},
-  number       = {7},
-  pages        = {1-28},
-  volume       = {18},
-  abstract     = {Ordinary differential equation (ODE) models are widely used to study biochemical reactions in cellular networks since they effectively describe the temporal evolution of these networks using mass action kinetics. The parameters of these models are rarely known a priori and must instead be estimated by calibration using experimental data. Optimization-based calibration of ODE models on is often challenging, even for low-dimensional problems. Multiple hypotheses have been advanced to explain why biochemical model calibration is challenging, including non-identifiability of model parameters, but there are few comprehensive studies that test these hypotheses, likely because tools for performing such studies are also lacking. Nonetheless, reliable model calibration is essential for uncertainty analysis, model comparison, and biological interpretation. We implemented an established trust-region method as a modular Python framework (fides) to enable systematic comparison of different approaches to ODE model calibration involving a variety of Hessian approximation schemes. We evaluated fides on a recently developed corpus of biologically realistic benchmark problems for which real experimental data are available. Unexpectedly, we observed high variability in optimizer performance among different implementations of the same mathematical instructions (algorithms). Analysis of possible sources of poor optimizer performance identified limitations in the widely used Gauss-Newton, BFGS and SR1 Hessian approximation schemes. We addressed these drawbacks with a novel hybrid Hessian approximation scheme that enhances optimizer performance and outperforms existing hybrid approaches. When applied to the corpus of test models, we found that fides was on average more reliable and efficient than existing methods using a variety of criteria. We expect fides to be broadly useful for ODE constrained optimization problems in biochemical models and to be a foundation for future methods development.},
-  creationdate = {2023-04-15T08:12:41},
-  doi          = {10.1371/journal.pcbi.1010322},
-  publisher    = {Public Library of Science},
-  url          = {https://doi.org/10.1371/journal.pcbi.1010322},
+  author           = {Fröhlich, Fabian and Sorger, Peter K.},
+  journal          = {PLOS Computational Biology},
+  title            = {Fides: Reliable trust-region optimization for parameter estimation of ordinary differential equation models},
+  year             = {2022},
+  month            = {07},
+  number           = {7},
+  pages            = {1-28},
+  volume           = {18},
+  abstract         = {Ordinary differential equation (ODE) models are widely used to study biochemical reactions in cellular networks since they effectively describe the temporal evolution of these networks using mass action kinetics. The parameters of these models are rarely known a priori and must instead be estimated by calibration using experimental data. Optimization-based calibration of ODE models on is often challenging, even for low-dimensional problems. Multiple hypotheses have been advanced to explain why biochemical model calibration is challenging, including non-identifiability of model parameters, but there are few comprehensive studies that test these hypotheses, likely because tools for performing such studies are also lacking. Nonetheless, reliable model calibration is essential for uncertainty analysis, model comparison, and biological interpretation. We implemented an established trust-region method as a modular Python framework (fides) to enable systematic comparison of different approaches to ODE model calibration involving a variety of Hessian approximation schemes. We evaluated fides on a recently developed corpus of biologically realistic benchmark problems for which real experimental data are available. Unexpectedly, we observed high variability in optimizer performance among different implementations of the same mathematical instructions (algorithms). Analysis of possible sources of poor optimizer performance identified limitations in the widely used Gauss-Newton, BFGS and SR1 Hessian approximation schemes. We addressed these drawbacks with a novel hybrid Hessian approximation scheme that enhances optimizer performance and outperforms existing hybrid approaches. When applied to the corpus of test models, we found that fides was on average more reliable and efficient than existing methods using a variety of criteria. We expect fides to be broadly useful for ODE constrained optimization problems in biochemical models and to be a foundation for future methods development.},
+  creationdate     = {2023-04-15T08:12:41},
+  doi              = {10.1371/journal.pcbi.1010322},
+  modificationdate = {2024-02-23T18:10:55},
+  publisher        = {Public Library of Science},
+  url              = {https://doi.org/10.1371/journal.pcbi.1010322},
 }
 
 @Article{ErdemMut2022,
@@ -1161,15 +1162,6 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
   doi              = {10.1007/978-1-0716-3008-2_3},
   modificationdate = {2023-07-06T10:36:35},
   url              = {https://doi.org/10.1007/978-1-0716-3008-2_3},
-}
-
-@Misc{SluijsZho2023,
-  author           = {Bob van Sluijs and Tao Zhou and Britta Helwig and Mathieu Baltussen and Frank Nelissen and Hans Heus and Wilhelm Huck},
-  title            = {Inverse Design of Enzymatic Reaction Network States},
-  year             = {2023},
-  creationdate     = {2023-07-06T10:39:46},
-  doi              = {10.21203/rs.3.rs-2646906/v1},
-  modificationdate = {2023-07-06T10:40:37},
 }
 
 @Article{BuckBas2023,
@@ -1249,6 +1241,38 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   doi              = {10.21203/rs.3.rs-3487081/v1},
   modificationdate = {2023-11-18T09:10:08},
   publisher        = {Research Square Platform LLC},
+}
+
+@Article{LangPen2024,
+  author           = {Lang, Paul F. and Penas, David R. and Banga, Julio R. and Weindl, Daniel and Novak, Bela},
+  journal          = {PLOS Computational Biology},
+  title            = {Reusable rule-based cell cycle model explains compartment-resolved dynamics of 16 observables in RPE-1 cells},
+  year             = {2024},
+  month            = {01},
+  number           = {1},
+  pages            = {1-24},
+  volume           = {20},
+  abstract         = {The mammalian cell cycle is regulated by a well-studied but complex biochemical reaction system. Computational models provide a particularly systematic and systemic description of the mechanisms governing mammalian cell cycle control. By combining both state-of-the-art multiplexed experimental methods and powerful computational tools, this work aims at improving on these models along four dimensions: model structure, validation data, validation methodology and model reusability. We developed a comprehensive model structure of the full cell cycle that qualitatively explains the behaviour of human retinal pigment epithelial-1 cells. To estimate the model parameters, time courses of eight cell cycle regulators in two compartments were reconstructed from single cell snapshot measurements. After optimisation with a parallel global optimisation metaheuristic we obtained excellent agreements between simulations and measurements. The PEtab specification of the optimisation problem facilitates reuse of model, data and/or optimisation results. Future perturbation experiments will improve parameter identifiability and allow for testing model predictive power. Such a predictive model may aid in drug discovery for cell cycle-related disorders.},
+  creationdate     = {2024-01-24T20:02:16},
+  doi              = {10.1371/journal.pcbi.1011151},
+  modificationdate = {2024-02-23T18:10:08},
+  publisher        = {Public Library of Science},
+  url              = {https://doi.org/10.1371/journal.pcbi.1011151},
+}
+
+@Article{SluijsZho2024,
+  author           = {van Sluijs, Bob and Zhou, Tao and Helwig, Britta and Baltussen, Mathieu G. and Nelissen, Frank H. T. and Heus, Hans A. and Huck, Wilhelm T. S.},
+  journal          = {Nature Communications},
+  title            = {Iterative design of training data to control intricate enzymatic reaction networks},
+  year             = {2024},
+  issn             = {2041-1723},
+  month            = feb,
+  number           = {1},
+  volume           = {15},
+  creationdate     = {2024-02-23T17:09:35},
+  doi              = {10.1038/s41467-024-45886-9},
+  modificationdate = {2024-02-23T17:09:35},
+  publisher        = {Springer Science and Business Media LLC},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
