--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1275,6 +1275,37 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   publisher        = {Springer Science and Business Media LLC},
 }
 
+@Article{KissVen2024,
+  author           = {Kiss, Anna E and Venkatasubramani, Anuroop V and Pathirana, Dilan and Krause, Silke and Sparr, Aline Campos and Hasenauer, Jan and Imhof, Axel and Müller, Marisa and Becker, Peter B},
+  journal          = {Nucleic Acids Research},
+  title            = {{Processivity and specificity of histone acetylation by the male-specific lethal complex}},
+  year             = {2024},
+  issn             = {0305-1048},
+  month            = {02},
+  pages            = {gkae123},
+  abstract         = {{Acetylation of lysine 16 of histone H4 (H4K16ac) stands out among the histone modifications, because it decompacts the chromatin fiber. The metazoan acetyltransferase MOF (KAT8) regulates transcription through H4K16 acetylation. Antibody-based studies had yielded inconclusive results about the selectivity of MOF to acetylate the H4 N-terminus. We used targeted mass spectrometry to examine the activity of MOF in the male-specific lethal core (4-MSL) complex on nucleosome array substrates. This complex is part of the Dosage Compensation Complex (DCC) that activates X-chromosomal genes in male Drosophila. During short reaction times, MOF acetylated H4K16 efficiently and with excellent selectivity. Upon longer incubation, the enzyme progressively acetylated lysines 12, 8 and 5, leading to a mixture of oligo-acetylated H4. Mathematical modeling suggests that MOF recognizes and acetylates H4K16 with high selectivity, but remains substrate-bound and continues to acetylate more N-terminal H4 lysines in a processive manner. The 4-MSL complex lacks non-coding roX RNA, a critical component of the DCC. Remarkably, addition of RNA to the reaction non-specifically suppressed H4 oligo-acetylation in favor of specific H4K16 acetylation. Because RNA destabilizes the MSL-nucleosome interaction in vitro we speculate that RNA accelerates enzyme-substrate turn-over in vivo, thus limiting the processivity of MOF, thereby increasing specific H4K16 acetylation.}},
+  creationdate     = {2024-02-28T18:25:06},
+  doi              = {10.1093/nar/gkae123},
+  eprint           = {https://academic.oup.com/nar/advance-article-pdf/doi/10.1093/nar/gkae123/56756494/gkae123.pdf},
+  modificationdate = {2024-02-28T18:25:06},
+  url              = {https://doi.org/10.1093/nar/gkae123},
+}
+
+@Article{DoresicGre2024,
+  author           = {Domagoj Dore{\v s}i{\'c} and Stephan Grein and Jan Hasenauer},
+  journal          = {bioRxiv},
+  title            = {Efficient parameter estimation for ODE models of cellular processes using semi-quantitative data},
+  year             = {2024},
+  abstract         = {Quantitative dynamical models facilitate the understanding of biological processes and the prediction of their dynamics. The parameters of these models are commonly estimated from experimental data. Yet, experimental data generated from different techniques do not provide direct information about the state of the system but a non-linear (monotonic) transformation of it. For such semi-quantitative data, when this transformation is unknown, it is not apparent how the model simulations and the experimental data can be compared. Here, we propose a versatile spline-based approach for the integration of a broad spectrum of semi-quantitative data into parameter estimation. We derive analytical formulas for the gradients of the hierarchical objective function and show that this substantially increases the estimation efficiency. Subsequently, we demonstrate that the method allows for the reliable discovery of unknown measurement transformations. Furthermore, we show that this approach can significantly improve the parameter inference based on semi-quantitative data in comparison to available methods. Modelers can easily apply our method by using our implementation in the open-source Python Parameter EStimation TOolbox (pyPESTO).Competing Interest StatementThe authors have declared no competing interest.},
+  creationdate     = {2024-04-20T13:05:06},
+  doi              = {10.1101/2024.01.26.577371},
+  elocation-id     = {2024.01.26.577371},
+  eprint           = {https://www.biorxiv.org/content/early/2024/01/30/2024.01.26.577371.full.pdf},
+  modificationdate = {2024-04-20T13:05:06},
+  publisher        = {Cold Spring Harbor Laboratory},
+  url              = {https://www.biorxiv.org/content/early/2024/01/30/2024.01.26.577371},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
