--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1196,16 +1196,6 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   url              = {https://physoc.onlinelibrary.wiley.com/doi/abs/10.1113/JP284652},
 }
 
-@Unknown{HasenauerMer2023,
-  author           = {Hasenauer, Jan and Merkt, Simon and Ali, Solomon and Gudina, Esayas and Adissu, Wondimagegn and Münchhoff, Maximilian and Graf, Alexander and Krebs, Stefan and Elsbernd, Kira and Kisch, Rebecca and Sirgu, Sisay and Fantahun, Bereket and Bekele, Delayehu and Rubio-Acero, Raquel and Gashaw, Mulatu and Girma, Eyob and Yilma, Daniel and Zeynudin, Ahmed and Paunovic, Ivana and Wieser, Andreas},
-  creationdate     = {2023-09-19T09:21:01},
-  doi              = {10.21203/rs.3.rs-3307821/v1},
-  modificationdate = {2023-09-19T09:21:01},
-  month            = {09},
-  title            = {Long-term monitoring of SARS-CoV-2 seroprevalence and variants in Ethiopia provides prediction for immunity and cross-immunity},
-  year             = {2023},
-}
-
 @Article{RaimundezFed2023,
   author           = {Elba Raim{\'{u}}ndez and Michael Fedders and Jan Hasenauer},
   journal          = {{iScience}},
@@ -1304,6 +1294,21 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   modificationdate = {2024-04-20T13:05:06},
   publisher        = {Cold Spring Harbor Laboratory},
   url              = {https://www.biorxiv.org/content/early/2024/01/30/2024.01.26.577371},
+}
+
+@Article{MerktAli2024,
+  author           = {Merkt, Simon and Ali, Solomon and Gudina, Esayas Kebede and Adissu, Wondimagegn and Gize, Addisu and Muenchhoff, Maximilian and Graf, Alexander and Krebs, Stefan and Elsbernd, Kira and Kisch, Rebecca and Betizazu, Sisay Sirgu and Fantahun, Bereket and Bekele, Delayehu and Rubio-Acero, Raquel and Gashaw, Mulatu and Girma, Eyob and Yilma, Daniel and Zeynudin, Ahmed and Paunovic, Ivana and Hoelscher, Michael and Blum, Helmut and Hasenauer, Jan and Kroidl, Arne and Wieser, Andreas},
+  journal          = {Nature Communications},
+  title            = {Long-term monitoring of SARS-CoV-2 seroprevalence and variants in Ethiopia provides prediction for immunity and cross-immunity},
+  year             = {2024},
+  issn             = {2041-1723},
+  month            = apr,
+  number           = {1},
+  volume           = {15},
+  creationdate     = {2024-04-29T08:30:06},
+  doi              = {10.1038/s41467-024-47556-2},
+  modificationdate = {2024-04-29T08:30:06},
+  publisher        = {Springer Science and Business Media LLC},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
