--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1311,6 +1311,17 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   publisher        = {Springer Science and Business Media LLC},
 }
 
+@Misc{LakrisenkoPat2024,
+  author           = {Polina Lakrisenko and Dilan Pathirana and Daniel Weindl and Jan Hasenauer},
+  title            = {Exploration of methods for computing sensitivities in ODE models at dynamic and steady states},
+  year             = {2024},
+  archiveprefix    = {arXiv},
+  creationdate     = {2024-05-30T09:48:00},
+  eprint           = {2405.16524},
+  modificationdate = {2024-05-30T09:48:00},
+  primaryclass     = {q-bio.QM},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
