--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1322,6 +1322,16 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   primaryclass     = {q-bio.QM},
 }
 
+@PhdThesis{Mutsuddy2024,
+  author           = {Mutsuddy, Arnab},
+  school           = {Clemson University},
+  title            = {Single cell pharmacodynamic modeling of cancer cell lines},
+  year             = {2024},
+  creationdate     = {2024-05-30T09:51:58},
+  modificationdate = {2024-05-30T09:53:40},
+  url              = {https://tigerprints.clemson.edu/all_dissertations/3572},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
