Update reference list

--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1069,18 +1069,19 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
 }
 
 @Article{ContentoCas2023,
-  author       = {Lorenzo Contento and Noemi Castelletti and Elba Raimúndez and Ronan {Le Gleut} and Yannik Schälte and Paul Stapor and Ludwig Christian Hinske and Michael Hoelscher and Andreas Wieser and Katja Radon and Christiane Fuchs and Jan Hasenauer},
-  journal      = {Epidemics},
-  title        = {Integrative modelling of reported case numbers and seroprevalence reveals time-dependent test efficiency and infectious contacts},
-  year         = {2023},
-  issn         = {1755-4365},
-  pages        = {100681},
-  volume       = {43},
-  abstract     = {Mathematical models have been widely used during the ongoing SARS-CoV-2 pandemic for data interpretation, forecasting, and policy making. However, most models are based on officially reported case numbers, which depend on test availability and test strategies. The time dependence of these factors renders interpretation difficult and might even result in estimation biases. Here, we present a computational modelling framework that allows for the integration of reported case numbers with seroprevalence estimates obtained from representative population cohorts. To account for the time dependence of infection and testing rates, we embed flexible splines in an epidemiological model. The parameters of these splines are estimated, along with the other parameters, from the available data using a Bayesian approach. The application of this approach to the official case numbers reported for Munich (Germany) and the seroprevalence reported by the prospective COVID-19 Cohort Munich (KoCo19) provides first estimates for the time dependence of the under-reporting factor. Furthermore, we estimate how the effectiveness of non-pharmaceutical interventions and of the testing strategy evolves over time. Overall, our results show that the integration of temporally highly resolved and representative data is beneficial for accurate epidemiological analyses.},
-  creationdate = {2023-04-15T07:59:57},
-  doi          = {10.1016/j.epidem.2023.100681},
-  keywords     = {Compartmental model, Parameter estimation, Uncertainty quantification, COVID-19},
-  url          = {https://www.sciencedirect.com/science/article/pii/S1755436523000178},
+  author           = {Lorenzo Contento and Noemi Castelletti and Elba Raimúndez and Ronan {Le Gleut} and Yannik Schälte and Paul Stapor and Ludwig Christian Hinske and Michael Hoelscher and Andreas Wieser and Katja Radon and Christiane Fuchs and Jan Hasenauer},
+  journal          = {Epidemics},
+  title            = {Integrative modelling of reported case numbers and seroprevalence reveals time-dependent test efficiency and infectious contacts},
+  year             = {2023},
+  issn             = {1755-4365},
+  pages            = {100681},
+  volume           = {43},
+  abstract         = {Mathematical models have been widely used during the ongoing SARS-CoV-2 pandemic for data interpretation, forecasting, and policy making. However, most models are based on officially reported case numbers, which depend on test availability and test strategies. The time dependence of these factors renders interpretation difficult and might even result in estimation biases. Here, we present a computational modelling framework that allows for the integration of reported case numbers with seroprevalence estimates obtained from representative population cohorts. To account for the time dependence of infection and testing rates, we embed flexible splines in an epidemiological model. The parameters of these splines are estimated, along with the other parameters, from the available data using a Bayesian approach. The application of this approach to the official case numbers reported for Munich (Germany) and the seroprevalence reported by the prospective COVID-19 Cohort Munich (KoCo19) provides first estimates for the time dependence of the under-reporting factor. Furthermore, we estimate how the effectiveness of non-pharmaceutical interventions and of the testing strategy evolves over time. Overall, our results show that the integration of temporally highly resolved and representative data is beneficial for accurate epidemiological analyses.},
+  creationdate     = {2023-04-15T07:59:57},
+  doi              = {10.1016/j.epidem.2023.100681},
+  keywords         = {Compartmental model, Parameter estimation, Uncertainty quantification, COVID-19},
+  modificationdate = {2024-06-28T08:27:57},
+  url              = {https://www.sciencedirect.com/science/article/pii/S1755436523000178},
 }
 
 @Article{FroehlichGer2023,
@@ -1330,6 +1331,18 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   creationdate     = {2024-05-30T09:51:58},
   modificationdate = {2024-05-30T09:53:40},
   url              = {https://tigerprints.clemson.edu/all_dissertations/3572},
+}
+
+@Misc{PhilippsKoe2024,
+  author           = {Maren Philipps and Antonia Körner and Jakob Vanhoefer and Dilan Pathirana and Jan Hasenauer},
+  title            = {Non-Negative Universal Differential Equations With Applications in Systems Biology},
+  year             = {2024},
+  archiveprefix    = {arXiv},
+  creationdate     = {2024-06-28T08:27:59},
+  eprint           = {2406.14246},
+  modificationdate = {2024-06-28T08:27:59},
+  primaryclass     = {q-bio.QM},
+  url              = {https://arxiv.org/abs/2406.14246},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
