--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1345,6 +1345,19 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   url              = {https://arxiv.org/abs/2406.14246},
 }
 
+@Article{BaltussenJon2024,
+  author           = {Baltussen, Mathieu G. and de Jong, Thijs J. and Duez, Quentin and Robinson, William E. and Huck, Wilhelm T. S.},
+  journal          = {Nature},
+  title            = {Chemical reservoir computation in a self-organizing reaction network},
+  year             = {2024},
+  issn             = {1476-4687},
+  month            = jun,
+  creationdate     = {2024-06-29T14:03:08},
+  doi              = {10.1038/s41586-024-07567-x},
+  modificationdate = {2024-06-29T14:03:08},
+  publisher        = {Springer Science and Business Media LLC},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
