--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1358,6 +1358,22 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   publisher        = {Springer Science and Business Media LLC},
 }
 
+@Article{DuezWie2024,
+  author           = {Duez, Quentin and van de Wiel, Jeroen and van Sluijs, Bob and Ghosh, Souvik and Baltussen, Mathieu G. and Derks, Max T. G. M. and Roithová, Jana and Huck, Wilhelm T. S.},
+  journal          = {Journal of the American Chemical Society},
+  title            = {Quantitative Online Monitoring of an Immobilized Enzymatic Network by Ion Mobility–Mass Spectrometry},
+  year             = {2024},
+  issn             = {1520-5126},
+  month            = jul,
+  number           = {30},
+  pages            = {20778--20787},
+  volume           = {146},
+  creationdate     = {2024-08-01T09:37:07},
+  doi              = {10.1021/jacs.4c04218},
+  modificationdate = {2024-08-01T09:37:07},
+  publisher        = {American Chemical Society (ACS)},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
