--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1390,6 +1390,19 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   url              = {https://doi.org/10.1158/1078-0432.CCR-24-0244},
 }
 
+@Article{JakstaiteZho2024,
+  author           = {Jakštaitė, ‪Miglė and Zhou, Tao and Nelissen, Frank and Huck, Wilhelm T.S. and van Sluijs, Bob},
+  title            = {Active learning maps the emergent dynamics of enzymatic reaction networks.},
+  year             = {2024},
+  month            = aug,
+  abstract         = {The dynamic properties of enzymatic reaction networks (ERNs) are difficult to predict due to the emergence of allosteric interactions, product inhibitions and the competition for resources, that all only materialize once the networks have been assembled. Combining experimental kinetics studies with computational modelling allows us to extract information on these emergent dynamic properties and build predictive models. Here, we utilized the pentose phosphate pathway to demonstrate that previously reported approaches to construct maximally informative datasets can be significantly improved by pulsing both enzymes and substrates into microfluidic flow reactors (instead of substrates only). Our method augments information available from online databases, to map the emergent dynamic behaviours of a network.},
+  creationdate     = {2024-09-10T07:54:04},
+  doi              = {10.26434/chemrxiv-2024-vxfkz},
+  keywords         = {Enzymatic reaction networks, optimal design, microfluidics, pentose phosphate pathway, emergent dynamics, biocatalysis, flow reactors, maximally informative data, kinetic modeling},
+  modificationdate = {2024-09-10T07:54:20},
+  publisher        = {American Chemical Society (ACS)},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
