--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1358,6 +1358,51 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   publisher        = {Springer Science and Business Media LLC},
 }
 
+@Article{DuezWie2024,
+  author           = {Duez, Quentin and van de Wiel, Jeroen and van Sluijs, Bob and Ghosh, Souvik and Baltussen, Mathieu G. and Derks, Max T. G. M. and Roithová, Jana and Huck, Wilhelm T. S.},
+  journal          = {Journal of the American Chemical Society},
+  title            = {Quantitative Online Monitoring of an Immobilized Enzymatic Network by Ion Mobility–Mass Spectrometry},
+  year             = {2024},
+  issn             = {1520-5126},
+  month            = jul,
+  number           = {30},
+  pages            = {20778--20787},
+  volume           = {146},
+  creationdate     = {2024-08-01T09:37:07},
+  doi              = {10.1021/jacs.4c04218},
+  modificationdate = {2024-08-01T09:37:07},
+  publisher        = {American Chemical Society (ACS)},
+}
+
+@Article{SchmiesterBra2024,
+  author           = {Schmiester, Leonard and Brasó-Maristany, Fara and González-Farré, Blanca and Pascual, Tomás and Gavilá, Joaquín and Tekpli, Xavier and Geisler, Jürgen and Kristensen, Vessela N. and Frigessi, Arnoldo and Prat, Aleix and Köhn-Luque, Alvaro},
+  journal          = {Clinical Cancer Research},
+  title            = {{Computational Model Predicts Patient Outcomes in Luminal B Breast Cancer Treated with Endocrine Therapy and CDK4/6 Inhibition}},
+  year             = {2024},
+  issn             = {1078-0432},
+  month            = {07},
+  pages            = {OF1-OF9},
+  abstract         = {{Development of a computational biomarker to predict, prior to treatment, the response to CDK4/6 inhibition (CDK4/6i) in combination with endocrine therapy in patients with breast cancer.A mechanistic mathematical model that accounts for protein signaling and drug mechanisms of action was developed and trained on extensive, publicly available data from breast cancer cell lines. The model was built to provide a patient-specific response score based on the expression of six genes (CCND1, CCNE1, ESR1, RB1, MYC, and CDKN1A). The model was validated in five independent cohorts of 148 patients in total with early-stage or advanced breast cancer treated with endocrine therapy and CDK4/6i. Response was measured either by evaluating Ki67 levels and PAM50 risk of relapse (ROR) after neoadjuvant treatment or by evaluating progression-free survival (PFS).The model showed significant association with patient’s outcomes in all five cohorts. The model predicted high Ki67 [area under the curve; AUC (95\\% confidence interval, CI) of 0.80 (0.64–0.92), 0.81 (0.60–1.00) and 0.80 (0.65–0.93)] and high PAM50 ROR [AUC of 0.78 (0.64–0.89)]. This observation was not obtained in patients treated with chemotherapy. In the other cohorts, patient stratification based on the model prediction was significantly associated with PFS [hazard ratio (HR) = 2.92 (95\\% CI, 1.08–7.86), P = 0.034 and HR = 2.16 (1.02 4.55), P = 0.043].A mathematical modeling approach accurately predicts patient outcome following CDK4/6i plus endocrine therapy that marks a step toward more personalized treatments in patients with Luminal B breast cancer.}},
+  creationdate     = {2024-08-01T09:42:58},
+  doi              = {10.1158/1078-0432.CCR-24-0244},
+  eprint           = {https://aacrjournals.org/clincancerres/article-pdf/doi/10.1158/1078-0432.CCR-24-0244/3478451/ccr-24-0244.pdf},
+  modificationdate = {2024-08-01T09:42:58},
+  url              = {https://doi.org/10.1158/1078-0432.CCR-24-0244},
+}
+
+@Article{JakstaiteZho2024,
+  author           = {Jakštaitė, ‪Miglė and Zhou, Tao and Nelissen, Frank and Huck, Wilhelm T.S. and van Sluijs, Bob},
+  title            = {Active learning maps the emergent dynamics of enzymatic reaction networks.},
+  year             = {2024},
+  month            = aug,
+  abstract         = {The dynamic properties of enzymatic reaction networks (ERNs) are difficult to predict due to the emergence of allosteric interactions, product inhibitions and the competition for resources, that all only materialize once the networks have been assembled. Combining experimental kinetics studies with computational modelling allows us to extract information on these emergent dynamic properties and build predictive models. Here, we utilized the pentose phosphate pathway to demonstrate that previously reported approaches to construct maximally informative datasets can be significantly improved by pulsing both enzymes and substrates into microfluidic flow reactors (instead of substrates only). Our method augments information available from online databases, to map the emergent dynamic behaviours of a network.},
+  creationdate     = {2024-09-10T07:54:04},
+  doi              = {10.26434/chemrxiv-2024-vxfkz},
+  keywords         = {Enzymatic reaction networks, optimal design, microfluidics, pentose phosphate pathway, emergent dynamics, biocatalysis, flow reactors, maximally informative data, kinetic modeling},
+  modificationdate = {2024-09-10T07:54:20},
+  publisher        = {American Chemical Society (ACS)},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
