Doc: show plotting measurements
It seems, the documentation didn't demonstrate how to plot measurements together with the model outputs yet.

--- a/python/examples/example_steadystate/ExampleSteadystate.ipynb
+++ b/python/examples/example_steadystate/ExampleSteadystate.ipynb
@@ -392,10 +392,10 @@
    "source": [
     "model = model_module.getModel()\n",
     "\n",
-    "print(\"Model name:      \", model.getName())\n",
-    "print(\"Model parameters:\", model.getParameterIds())\n",
-    "print(\"Model outputs:   \", model.getObservableIds())\n",
-    "print(\"Model states:    \", model.getStateIds())"
+    "print(\"Model name:            \", model.getName())\n",
+    "print(\"Model parameters:      \", model.getParameterIds())\n",
+    "print(\"Model outputs:         \", model.getObservableIds())\n",
+    "print(\"Model state variables: \", model.getStateIds())"
    ]
   },
   {
@@ -983,6 +983,21 @@
     "rdata = amici.runAmiciSimulation(model, solver, edata)\n",
     "\n",
     "print(\"Log-likelihood %f\" % rdata[\"llh\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": "The provided measurements can be visualized together with the simulation results by passing the `Expdata` to `amici.plotting.plot_observable_trajectories`:"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amici.plotting.plot_observable_trajectories(rdata, edata=edata)\n",
+    "plt.legend(loc=\"center left\", bbox_to_anchor=(1.04, 0.5))"
    ]
   },
   {
