--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1420,6 +1420,21 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   url              = {https://doi.org/10.1007/978-3-031-63164-1_15},
 }
 
+@Article{ArmisteadHoe2024,
+  author           = {Armistead, Joy and Höpfl, Sebastian and Goldhausen, Pierre and Müller-Hartmann, Andrea and Fahle, Evelin and Hatzold, Julia and Franzen, Rainer and Brodesser, Susanne and Radde, Nicole E. and Hammerschmidt, Matthias},
+  journal          = {Cell Death & Disease},
+  title            = {A sphingolipid rheostat controls apoptosis versus apical cell extrusion as alternative tumour-suppressive mechanisms},
+  year             = {2024},
+  issn             = {2041-4889},
+  month            = oct,
+  number           = {10},
+  volume           = {15},
+  creationdate     = {2024-10-17T16:27:55},
+  doi              = {10.1038/s41419-024-07134-2},
+  modificationdate = {2024-10-17T16:28:08},
+  publisher        = {Springer Science and Business Media LLC},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
