--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1403,6 +1403,38 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   publisher        = {American Chemical Society (ACS)},
 }
 
+@InBook{BarthelKun2024,
+  author           = {Barthel, Lars and Kunz, Philipp and King, Rudibert and Meyer, Vera},
+  editor           = {Kwade, Arno and Kampen, Ingo},
+  pages            = {467--490},
+  publisher        = {Springer Nature Switzerland},
+  title            = {Harnessing Genetic and Microfluidic Approaches to Model Shear Stress Response in Cell Wall Mutants of the Filamentous Cell Factory Aspergillus niger},
+  year             = {2024},
+  address          = {Cham},
+  isbn             = {978-3-031-63164-1},
+  abstract         = {Aspergillus niger is an efficient biotechnological cell factory harnessed for the production of proteins, enzymes, platform chemicals and secondary metabolites. Critical for productivity of filamentous fungi such as A. niger is their hyphal growth and the ability of their cell walls to withstand shear stress conditions during submerged bioreactor cultivations. As chitin is thought to be fundamental for the rigidity of fungal hyphae, we generated a chitin synthase knock-out library for A. niger and studied the impact of these genetic modifications on its ability to withstand shear stress during submerged bioreactor cultivations. We isolated a double deletion mutant in which the genes chsE and chsD were inactivated and observed a reduction in chitin content by 60{\%}, cell wall thickness by 20{\%}, hyphal diameter by 60{\%} and maximum growth rate by 25{\%}. We furthermore developed a parallelized microfluidic growth chamber system that enabled us to track the growth of the double mutant and the respective control strain using a confocal laser scanning microscope, and, additionally, to compare their growth responses when subjected to different shear stress conditions. A newly developed mathematical model allowed us to compute and evaluate lag-phase, maximum growth rate and shear stress response based on the microscopic images obtained. Overall, this microfluidic approach clearly identified differences in shear stress response between both strains and has high potential as scale-down screening tool to predict growth characteristics under submerged bioreactor cultivations.},
+  booktitle        = {Dispersity, Structure and Phase Changes of Proteins and Bio Agglomerates in Biotechnological Processes},
+  creationdate     = {2024-09-29T16:46:24},
+  doi              = {10.1007/978-3-031-63164-1_15},
+  modificationdate = {2024-09-29T16:46:24},
+  url              = {https://doi.org/10.1007/978-3-031-63164-1_15},
+}
+
+@Article{ArmisteadHoe2024,
+  author           = {Armistead, Joy and Höpfl, Sebastian and Goldhausen, Pierre and Müller-Hartmann, Andrea and Fahle, Evelin and Hatzold, Julia and Franzen, Rainer and Brodesser, Susanne and Radde, Nicole E. and Hammerschmidt, Matthias},
+  journal          = {Cell Death & Disease},
+  title            = {A sphingolipid rheostat controls apoptosis versus apical cell extrusion as alternative tumour-suppressive mechanisms},
+  year             = {2024},
+  issn             = {2041-4889},
+  month            = oct,
+  number           = {10},
+  volume           = {15},
+  creationdate     = {2024-10-17T16:27:55},
+  doi              = {10.1038/s41419-024-07134-2},
+  modificationdate = {2024-10-17T16:28:08},
+  publisher        = {Springer Science and Business Media LLC},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
