--- a/python/examples/example_jax_petab/ExampleJaxPEtab.ipynb
+++ b/python/examples/example_jax_petab/ExampleJaxPEtab.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "source": [
     "## Simulation\n",
-    "In principle, we can already use this model for simulation using the [JAXModel](https://amici.readthedocs.io/en/latest/generated/amici.jax.html#amici.jax.JAXModel) method. However, this approach can be cumbersome as timepoints, data etc need to be specified manually. Instead, we process the PEtab problem into a [JAXProblem](https://amici.readthedocs.io/en/latest/generated/amici.jax.html#amici.jax.JAXProblem), which enables efficient simulation using [amici.jax.run_simulations]((https://amici.readthedocs.io/en/latest/generated/amici.jax.html#amici.jax.run_simulations)."
+    "In principle, we can already use this model for simulation using the [simulate_condition](https://amici.readthedocs.io/en/latest/generated/amici.jax.html#amici.jax.JAXModel.simulate_condition) method. However, this approach can be cumbersome as timepoints, data etc. need to be specified manually. Instead, we process the PEtab problem into a [JAXProblem](https://amici.readthedocs.io/en/latest/generated/amici.jax.html#amici.jax.JAXProblem), which enables efficient simulation using [amici.jax.run_simulations]((https://amici.readthedocs.io/en/latest/generated/amici.jax.html#amici.jax.run_simulations)."
    ]
   },
   {
@@ -539,7 +539,7 @@
    "source": [
     "The root cause of this error lies in the fact that, to enable autodiff, direct modifications of attributes are not allowed in [equinox](https://docs.kidger.site/equinox/), which AMICI utilizes under the hood. Consequently, attributes of instances like `JAXModel` or `JAXProblem` cannot be updated directly — this is the price we have to pay for autodiff.\n",
     "\n",
-    "However, `JAXProblem` provides a convenient method called `update_parameters`. The caveat is that this method creates a new JAXProblem instance instead of modifying the existing one."
+    "However, `JAXProblem` provides a convenient method called [update_parameters](https://amici.readthedocs.io/en/latest/generated/amici.jax.html#amici.jax.JAXProblem.update_parameters. The caveat is that this method creates a new JAXProblem instance instead of modifying the existing one."
    ]
   },
   {
@@ -1132,19 +1132,6 @@
     "    scaled_gradients=True,\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6a0beb20f53561",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-19T09:52:03.338529Z",
-     "start_time": "2024-11-19T09:52:03.336789Z"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
