fix compilation issue

--- a/python/examples/example_jax_petab/ExampleJaxPEtab.ipynb
+++ b/python/examples/example_jax_petab/ExampleJaxPEtab.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "To begin, we will import a model using [PEtab](https://petab.readthedocs.io). For this demonstration, we will utilize the [Benchmark Collection](https://github.com/Benchmarking-Initiative/Benchmark-Models-PEtab), which provides a diverse set of models. For more information on importing PEtab models, refer to the corresponding [PEtab notebook](https://amici.readthedocs.io/en/latest/petab.html).\n",
     "\n",
-    "In this tutorial, we will import the Böhm model from the Benchmark Collection. Using [amici.petab_import](https://amici.readthedocs.io/en/latest/generated/amici.petab_import.html#amici.petab_import.import_petab_problem), we will load the PEtab problem. To create a  [JAXModel](https://amici.readthedocs.io/en/latest/generated/amici.jax.html#amici.jax.JAXModel) instead of a standard AMICI model, we set the `jax` parameter to `True`. As we won't use the corresponding AMICI model, we set the `compile_` to `False`.\n"
+    "In this tutorial, we will import the Böhm model from the Benchmark Collection. Using [amici.petab_import](https://amici.readthedocs.io/en/latest/generated/amici.petab_import.html#amici.petab_import.import_petab_problem), we will load the PEtab problem. To create a  [JAXModel](https://amici.readthedocs.io/en/latest/generated/amici.jax.html#amici.jax.JAXModel) instead of a standard AMICI model, we set the `jax` parameter to `True`.\n"
    ]
   },
   {
@@ -52,7 +52,7 @@
     "# Import the PEtab problem as a JAX-compatible AMICI model\n",
     "jax_model = import_petab_problem(\n",
     "    petab_problem,\n",
-    "    compile_=False,  # do not compile regular amici model\n",
+    "    compile_=True,  # do not compile regular amici model\n",
     "    verbose=False,  # no text output\n",
     "    jax=True,  # return jax model\n",
     ")"
@@ -977,7 +977,10 @@
     "\n",
     "# Import the PEtab problem as a standard AMICI model\n",
     "amici_model = import_petab_problem(\n",
-    "    petab_problem, compile_=True, verbose=False, jax=False\n",
+    "    petab_problem,\n",
+    "    compile_=False,  # do not recompile\n",
+    "    verbose=False,\n",
+    "    jax=False,  # load the amici model this time\n",
     ")\n",
     "\n",
     "# Configure the solver with appropriate tolerances\n",
