Improve model extension import
Previously, it wasn't possible to import two model modules with the same name.
Now this is at least possible if they are in different locations.
Overwriting and importing a previously imported extension is still not supported.

--- a/python/examples/example_splines/ExampleSplines.ipynb
+++ b/python/examples/example_splines/ExampleSplines.ipynb
@@ -25,8 +25,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "from importlib import import_module\n",
     "from shutil import rmtree\n",
     "from tempfile import TemporaryDirectory\n",
     "from uuid import uuid1\n",
@@ -57,7 +55,7 @@
     "                parameters,\n",
     "                build_dir=build_dir,\n",
     "                model_name=model_name,\n",
-    "                **kwargs\n",
+    "                **kwargs,\n",
     "            )\n",
     "    else:\n",
     "        build_dir = os.path.join(BUILD_PATH, model_name)\n",
@@ -67,7 +65,7 @@
     "            parameters,\n",
     "            build_dir=build_dir,\n",
     "            model_name=model_name,\n",
-    "            **kwargs\n",
+    "            **kwargs,\n",
     "        )\n",
     "\n",
     "\n",
@@ -79,7 +77,7 @@
     "    model_name,\n",
     "    T=1,\n",
     "    discard_annotations=False,\n",
-    "    plot=True\n",
+    "    plot=True,\n",
     "):\n",
     "    if parameters is None:\n",
     "        parameters = {}\n",
@@ -89,13 +87,12 @@
     "    )\n",
     "    sbml_importer.sbml2amici(model_name, build_dir)\n",
     "    # Import the model module\n",
-    "    sys.path.insert(0, os.path.abspath(build_dir))\n",
-    "    model_module = import_module(model_name)\n",
+    "    model_module = amici.import_model_module(model_name, build_dir)\n",
     "    # Setup simulation timepoints and parameters\n",
     "    model = model_module.getModel()\n",
     "    for name, value in parameters.items():\n",
     "        model.setParameterByName(name, value)\n",
-    "    if isinstance(T, (int, float)):\n",
+    "    if isinstance(T, int | float):\n",
     "        T = np.linspace(0, T, 100)\n",
     "    model.setTimepoints([float(t) for t in T])\n",
     "    solver = model.getSolver()\n",
@@ -320,7 +317,7 @@
    ],
    "source": [
     "# Finally, we can simulate it in AMICI\n",
-    "model, rdata = simulate(sbml_model);"
+    "model, rdata = simulate(sbml_model)"
    ]
   },
   {
